--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css">
     <script src="js/scripts.js"></script>
 </head>
 <body>
@@ -30,7 +31,7 @@
                 </div>
             </form>
         </div>
-        <div id="result-container">
+        <div id="result-container" class="hide">
             <p id="imc-number">Seu IMC: <span></span></p>
             <p id="imc-info">Situação Atual: <span></span></p>
             <h3>Confira as classificações:</h3>
